--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,5 @@ spring.jpa.show-sql = true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
-#spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+# TEST - hez
+# https://www.baeldung.com/java-ftp-client
