test eset hiányzik

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,18 @@ spring.jpa.show-sql = true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
+ftp.server.name = 192.168.1.101
+ftp.server.port = 8082
+ftp.server.username = root
+ftp.server.password = root
+ftp.server.path = /report/
+
+curl.exe = C:/Windows/System32/
+curl.xapi.key = 63304c70
+
+
+
+
+
 # TEST - hez
 # https://www.baeldung.com/java-ftp-client
