Test Eset nem jó, mert a 12-es javát használom és az nem kompatibilis  a feladat leírásával

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,12 @@
-#server.port= 8080
-#server.address=localhost
-
-spring.datasource.url= jdbc:postgresql://localhost:5432/buzzTest
+spring.datasource.url=jdbc:postgresql://localhost:5432/buzzTest
 spring.datasource.username=postgres
 spring.datasource.password=root
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql = true
-
+spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
-
-ftp.server.name = 192.168.1.101
-ftp.server.port = 8082
-ftp.server.username = root
-ftp.server.password = root
-ftp.server.path = /report/
-
-curl.exe = C:/Windows/System32/
-curl.xapi.key = 63304c70
-
-
-
-
-
-# TEST - hez
-# https://www.baeldung.com/java-ftp-client
+        
